--- a/init.html
+++ b/init.html
@@ -13,11 +13,9 @@
 		  	</div>
 	  		<div class="panel-body">
 	    		System kontroli wersji (ang. version/revision control system) – oprogramowanie s³u¿¹ce do œledzenia zmian g³ównie w kodzie Ÿród³owym oraz pomocy programistom w ³¹czeniu zmian dokonanych w plikach przez wiele osób w ró¿nych momentach czasowych.
-
-3. Stopka sekcji 1:
 	  		</div>
 			<footer class="panel-footer">
-				Section1 footer
+				<a href="http://pl.wikipedia.org/wiki/System_kontroli_wersji">Wikipedia</a>
 			</footer>
 		</section>
 		<section id="section2" class="panel panel-default">
